# Zenithium

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
app/: Bootstrap.cpp  Bootstrap.h  CMakeLists.txt  main.cpp
cmake/: ZenithiumCompilerFlags.cmake  ZenithiumPackaging.cmake  ZenithiumQtHelpers.cmake  ZenithiumSanitizers.cmake  ZenithiumVersion.cmake
engine/: CMakeLists.txt
engine/core/: CMakeLists.txt
engine/core/include/zen/core/: Version.h
engine/core/src/: Version.cpp
engine/document/: CMakeLists.txt
engine/document/include/zen/document/: Document.h  LineDiff.h
engine/document/src/: Document.cpp  LineDiff.cpp
engine/git/: CMakeLists.txt
engine/git/include/zen/git/: GitService.h
engine/git/src/: GitService.cpp
engine/syntax/: CMakeLists.txt
engine/syntax/include/zen/syntax/: LanguageRules.h
engine/syntax/src/: LanguageRules.cpp
engine/text/: CMakeLists.txt
engine/text/include/zen/text/: TextBuffer.h
engine/text/src/: TextBuffer.cpp
packaging/windows/: Zenithium.iss  build-installer.ps1
tests/: CMakeLists.txt
tests/unit/engine_core/: CMakeLists.txt  VersionTest.cpp
ui/: CMakeLists.txt
ui/dialogs/SettingsDialog/: Preferences.cpp  Preferences.h  SettingsDialog.cpp  SettingsDialog.h
ui/editor/: EditorView.cpp  EditorView.h  Gutter.cpp  Gutter.h  SyntaxHighlighter.cpp  SyntaxHighlighter.h
ui/panels/Explorer/: ExplorerPanel.cpp  ExplorerPanel.h
ui/panels/Git/: GitPanel.cpp  GitPanel.h
ui/panels/Terminal/: TerminalPanel.cpp  TerminalPanel.h
ui/resources/: zenithium.qrc
ui/shell/: CommandPalette.cpp  CommandPalette.h  FindBar.cpp  FindBar.h  MainWindow.cpp  MainWindow.h  StatusBar.cpp  StatusBar.h  TabCloseButton.cpp  TabCloseButton.h  TitleBar.cpp  TitleBar.h
ui/theming/: ThemeEngine.cpp  ThemeEngine.h
ui/theming/qss/: dark.qss  light.qss
ui/welcome/: WelcomePage.cpp  WelcomePage.h
