add_subdirectory(core)
add_subdirectory(text)
add_subdirectory(document)
add_subdirectory(syntax)
add_subdirectory(git)
# Additional engine modules will be added here as they are implemented:
# add_subdirectory(vfs)
# add_subdirectory(workspace)
# add_subdirectory(project)
# add_subdirectory(indexer)
# add_subdirectory(search)
# add_subdirectory(syntax)
# add_subdirectory(lsp)
# add_subdirectory(dap)
# add_subdirectory(build)
# add_subdirectory(vcs/git)
# add_subdirectory(terminal)
# add_subdirectory(tasks)
# add_subdirectory(settings)
# add_subdirectory(telemetry)
